ui: prevent w. penn's map residence markers from overlapping

--- a/packages/ui/src/pages/friend/MapBlock.css
+++ b/packages/ui/src/pages/friend/MapBlock.css
@@ -47,3 +47,12 @@
     max-width: 1400px;
   }
 }
+
+/* keep William Penn's residence markers from overlapping */
+.MapBlock .william-penn label:nth-of-type(1) {
+  padding-left: 9em;
+}
+
+.MapBlock .william-penn label:nth-of-type(2) {
+  padding-right: 10em;
+}
